# seedspark

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  Makefile  PreCommit.md  README.MD  README.md  SQL  codecov.yml  pyproject.toml  weekend_fares_kpi.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/config/: pr-autoflow.json
.github/workflows/: airflow_tests.yaml  build_test.yml  cancel_duplicate_workflow_runs.yml  close_stale.yml  codacy.yml  code_quality_lint_checkers.yml  codeql-analysis.yml  dependabot_approve_and_label.yml  docker-publish.yml  label.yml  lint_commits.yml  pre_commit.yml  publish_pypi.yml  pysa.yml  pyspark_tests.yaml  trufflehog.yml
airflowdags/: .gitignore  README.md  dev-requirements.txt  ibis_test.py  pyproject.toml  requirements.txt  test_duck.py
airflowdags/.astro/: test_dag_integrity_default.py
airflowdags/dags/: example_dag_basic.py
airflowdags/dags/tripsdata/: clickhouse_airports_elt.py  clickhouse_etl.py  clickhouse_simple.py  fare_kpis_clickhouse_elt.py
airflowdags/dags/utils/: airports_elt.py  fareestimate_elt.py
airflowdags/datasets/: fare_kpis.db
airflowdags/tests/: conftest.py
airflowdags/tests/dags/: test_dag_integrity.py
airflowdags/tests/integrations/: test_clickhouse.py
airflowdags/tests/utils/: test_airports_elt.py  test_airports_etl.py  test_fare_kpi_elt.py
seedspark/: decorators.py  sparkapp.py
seedspark/apps/: clickhouse_delta.py
seedspark/configs/: __init__.py  clickhouse.py  configs.py
seedspark/connections/: clickhouse.py
seedspark/contrib/testing/: spark.py
seedspark/examples/: clichouse_taxi.py  weekend_fares_kpi.py
seedspark/log/: __init__.py  client.py
seedspark/spark/: __init__.py
tests/: conftest.py  strategies.py  test_clickhouse.py  test_example.py  test_seedspark.py
tests/integration/: test_weekend_fares.py
tests/log/: conftest.py  strategies.py  test_client.py
tests/log/captures/: test_python_exceptions.py  test_python_warnings.py
tests/log/handles/: test_common.py  test_intercept_handler.py  test_propagate_handler.py
tests/log/patchers/: test_patch_loggers.py
tests/test_imports/: test_on_etl.py
