[tool.poetry]
name = "seedspark"
version = "0.1.0"
description = ""
authors = ["ChethanUK <chethanuk@outlook.com>"]
readme = "README.md"

###########################################################################
#                         MAIN DEPENDENCIES
###########################################################################
[tool.poetry.dependencies]
python = "^3.10"
pyspark = {extras = ["connect", "sql"], version = "^3.5.0"}
sqlglot = "^20.11.0"
loguru = "^0.7.2"
onetl = "^0.10.1"


###########################################################################
#                         DEPENDENCY GROUPS
###########################################################################
delta-spark = "3.1.0"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.development.dependencies]
semver = "^3"

[tool.poetry.group.testing.dependencies]
farsante = "^0.2.0"
chispa = "^0.9.4"
pytest = "<8"

hypothesis = "^6.98.2"
pytest-describe = "^2.1.0"

[tool.poetry.group.linting.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## Black
[tool.black]
# https://github.com/psf/black
line-length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | tests/airflow-dags/
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
line_length = 119
indent = '    '
multi_line_output = 3
include_trailing_comma = true
#force_grid_wrap = 0
atomic = true
#lines_after_imports = 2
#lines_between_types = 1
skip_glob = ['__init__.py']
#src_paths=isort,test

# [mypy]
# python_version = 3.8
# #warn_return_any = True

# [pytest]
# testpaths = "tests"
# norecursedirs = ".git .* *.egg* old docs dist build *.venv docs/_build *.egg .tox"
# cache_dir = "./.pytest_cache"
# python_files = "*test_*.py"
# timeout = 300

[tool.ruff]
select = ["ALL"]
line-length = 150
ignore = [
    "D100",
    ]
extend-exclude = ["docs"]  # "tests",

[tool.ruff.per-file-ignores]
"tests/__init__.py" = ["F403"]
